fixed styling on menubar, its complient on mobile device

--- a/WEB/src/Pages/LoginPage/loginPage.css
+++ b/WEB/src/Pages/LoginPage/loginPage.css
@@ -44,6 +44,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 10%;
   margin-bottom: 25px;
 }
 
@@ -52,10 +53,14 @@ html {
   max-width: 85%;
 }
 
-.no-margin {
-  margin: 0 !important;
-}
-
-.no-padding {
-  padding: 0 !important;
+@media only screen and (max-width: 650px) {
+  .google-login-button {
+    padding: 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 75px;
+  }
 }
