--- a/WEB/src/components/MenuBar/menuBar.css
+++ b/WEB/src/components/MenuBar/menuBar.css
@@ -1,17 +1,17 @@
 .menuBar {
-  top: 155px;
+  top: 150px;
   right: 0;
   left: 0;
-  height: 23%;
+  height: 25%;
   z-index: 1;
   position: fixed;
   transform: translateY(-100%);
   transition: transform 0.5s;
-  /* box-shadow: 0 0 5px 1px #595959; */
   background-color: #e9eaec;
 }
 
 .menuBar-open {
+  position: fixed;
   transform: translateY(0);
   box-shadow: 0 0 5px 1px #595959;
 }
@@ -35,11 +35,11 @@
 .bar {
   background-color: #569b7e;
   z-index: 2;
-  position: relative;
-}
-
-.header {
-  background-color: #569b7e;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 20%;
 }
 
 .menuPos {
@@ -50,7 +50,7 @@
 }
 
 .menuLogo {
-  max-height: 200px;
+  max-height: 55%;
   max-width: 85%;
 }
 
@@ -103,4 +103,65 @@ a.menu-link {
   cursor: pointer;
   margin: 5px;
   display: inline-block;
+}
+
+.aStyle {
+  text-decoration: none;
+  border-bottom: none !important;
+}
+
+@media only screen and (max-width: 650px) {
+  .menuLogo {
+    max-width: 90%;
+    max-height: 100%;
+  }
+  .menuPos {
+    width: 125px;
+    white-space: nowrap;
+    margin: 0px;
+    text-align: right;
+  }
+  .menuBar {
+    top: 95px;
+    right: 0;
+    left: 0;
+    height: 23%;
+    z-index: 1;
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.5s;
+    background-color: #e9eaec;
+  }
+  .menuBar-open {
+    transform: translateY(0);
+    box-shadow: 0 0 5px 1px #595959;
+  }
+  .button {
+    display: block;
+    border-radius: 4px;
+    border: none;
+    color: #ffffff;
+    background: transparent;
+    text-align: center;
+    font-size: 28px;
+    padding: 10px;
+    width: 100%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    display: inline-block;
+  }
+  .aStyle {
+    text-decoration: none;
+    border-bottom: none !important;
+  }
+  .bar {
+    background-color: #569b7e;
+    z-index: 2;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 12%;
+  }
 }
